# run_command_on_server

./: Cargo.toml  README.md
src/: client.rs  server.rs
